# Flexibility-Curve-Bidding-System

./: README.md
wdpLFM_GNN/: CMakeLists.txt  flexibilityCurveTree.cpp  flexibilityCurveTree.h  main  main.cpp  testGNN.cpp  testGNN.h
